--- a/Resources/Prototypes/Entities/Markers/Spawners/vehicles.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/vehicles.yml
@@ -53,3 +53,28 @@
   - type: ConditionalSpawner
     prototypes:
       - VehicleSkeletonMotorcycle
+
+
+- type: entity
+  name: Hauler APLU Spawner
+  id: SpawnMechHauler
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+      - state: green
+      - sprite: Objects/Specific/Mech/mecha_equipment.rsi
+        state: mecha_clamp
+  - type: ConditionalSpawner
+    prototypes:
+      - MechHauler
+
+
+- type: entity
+  id: SpawnMechHaulerBattery
+  parent: SpawnMechHauler
+  suffix: Battery
+  components:
+  - type: ConditionalSpawner
+    prototypes:
+      - MechHaulerBattery 
