--- a/Resources/Textures/Tiles/attributions.yml
+++ b/Resources/Textures/Tiles/attributions.yml
@@ -28,8 +28,8 @@
 
 - files: ["shuttleblue.png", "shuttleorange.png", "shuttlepurple.png", "shuttlered.png", "shuttlewhite.png"]
   license: "CC-BY-SA-3.0"
-  copyright: "paradisestation commit 69c831afcd9aef25a2889b507e4f36a3a5fc6def, originally from /VG/ eris"
-  source: "https://github.com/ParadiseSS13/Paradise"
+  copyright: "Edited by Flareguy for https://github.com/space-wizards/space-station-14, original sprites from paradisestation commit 69c831afcd9aef25a2889b507e4f36a3a5fc6def, originally from /VG/ eris"
+  source: "https://github.com/space-wizards/space-station-14, https://github.com/ParadiseSS13/Paradise"
 
 - files: ["deprecated.png"]
   license: "MIT"
@@ -60,3 +60,8 @@
   license: "CC0-1.0"
   copyright: "Created by EmoGarbage404 (github) for space-station-14."
   source: "https://github.com/space-wizards/space-station-14/pull/13766"
+  
+- files: ["plating.png"]
+  license: "CC0-1.0"
+  copyright: "Edited by Flareguy for https://github.com/space-wizards/space-station-14, original sprite taken from /tg/station at commit fb2d71495bfe81446159ef528534193d09dd8d34."
+  source: "https://github.com/space-wizards/space-station-14"
