--- a/Resources/Prototypes/Datasets/tips.yml
+++ b/Resources/Prototypes/Datasets/tips.yml
@@ -69,7 +69,7 @@
   - "As the Captain, try to be active and patrol the station. Staying in the bridge might be tempting, but you'll just end up putting a bigger target on your back!"
   - "As a Scientist, you can try random things on an artifact while the scanner is on cooldown to speed up the point extraction process significantly."
   - "As a Scientist, you can utilize better machine parts to increase the efficiency of machines. This can make certain machines, such as the biomass reclaimer, significantly better!"
-  - "As a Scientist, you can try to guess what a machine upgrade will do based on what part you are upgrading. Matter bins enhance storage capabilities, capacitors increase efficiency, and manipulators enhance power."
+  - "As a Scientist, you can try to guess what a machine upgrade will do based on what part you are upgrading.
   - "As a Medical Doctor, try to be weary of overdosing your patients, especially if someone else has already been on the scene. Overdoses are often lethal to patients in crit!"
   - "As a Medical Doctor, don't underestimate your cryo pods! They heal almost every type of damage, making them very useful when you are overloaded or need to heal someone in a pinch."
   - "As a Medical Doctor, excise caution when putting reptilians in cryopods. They will take a lot of extra cold damage, but you can mitigate this with some burn medicine or leporazine."
