--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/access.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/access.yml
@@ -840,6 +840,14 @@
 
 - type: entity
   parent: AirlockGlassShuttle
+  id: AirlockExternalGlassShuttleEmergency
+  suffix: External, Emergency, Glass, Docking
+  components:
+    - type: PriorityDock
+      tag: DockEmergency
+
+- type: entity
+  parent: AirlockGlassShuttle
   id: AirlockExternalGlassShuttleArrivals
   suffix: External, Arrivals, Glass, Docking
   components:
